force-app/main/default/objects/Student__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Polity</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>International Relations</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>