force-app/main/default/objects/Student__c/listViews/All_Students.listView-meta.xml
<ListView>
    <fullName>All_Students</fullName>
    <columns>Registration_Number__c</columns>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>School__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Students</label>
</ListView>